--- a/projects/LandingPageProject4/style/index.css
+++ b/projects/LandingPageProject4/style/index.css
@@ -149,3 +149,56 @@ body {
   font-size: 10pt;
   bottom: 0;
 }
+
+/* Responsive  */
+
+@media (max-width: 480px) {
+  .NavBar {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .ProfilePictureNavBar {
+    width: 30px;
+    height: 30px;
+  }
+
+  .Home {
+    font-size: 1rem;
+    padding: 5px;
+    height: auto;
+  }
+
+  .ProjectButtons .button {
+    width: 30%;
+    margin: 5px 0;
+  }
+
+  .TechnologyPicture {
+    flex-direction: row;
+  }
+
+  .TechnologyPicture img {
+    width: 50px;
+    height: 50px;
+  }
+
+  .ProjectBox {
+    position: relative;
+    height: 60vh;
+  }
+
+  .ProjectBoxImage {
+    height: 200px;
+  }
+
+  .SocialMediaBar {
+    flex-direction: row;
+    height: auto;
+  }
+
+  .Footer {
+    font-size: 8pt;
+    bottom: 0;
+  }
+}
