--- a/projects/LandingPageProject1/Project 1/index.css
+++ b/projects/LandingPageProject1/Project 1/index.css
@@ -64,6 +64,8 @@ input {
   justify-content: right;
   align-items: right;
   text-align: right;
+  border-bottom: 2px solid #020253;
+  background-color: #cbdcfc;
 }
 
 button {
@@ -80,4 +82,53 @@ button {
 
 button:hover {
   background-color: #004080;
+}
+
+/* Responsive */
+
+@media (max-width: 480px) {
+  body {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    direction: ltr;
+  }
+
+  .LeftSide {
+    width: 100%;
+    height: 55%;
+  }
+
+  .RightSide {
+    padding: 1rem;
+    width: 50%;
+  }
+
+  h1 {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    justify-content: center;
+    text-align: center;
+  }
+
+  p {
+    font-size: 0.875rem;
+    margin-bottom: 1rem;
+  }
+
+  .FormArea {
+    width: 90%;
+  }
+
+  label {
+    display: block;
+    text-align: right;
+    right: 0;
+    margin-bottom: 0.5rem;
+  }
+
+  input,
+  button {
+    width: 100%;
+  }
 }
