--- a/projects/LandingPageProject3/project 3/style/index.css
+++ b/projects/LandingPageProject3/project 3/style/index.css
@@ -37,10 +37,11 @@
 }
 
 body {
-  top: 0px;
-  left: 0px;
-  width: 0 auto;
-  height: 789px;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100vw;
+  min-height: 100vh;
   background: transparent linear-gradient(180deg, #281eff 0%, #2dff8c 100%) 0%
     0% no-repeat padding-box;
   opacity: 1;
@@ -73,7 +74,6 @@ h4 {
 }
 
 form {
-  /* border: 2px solid white; */
   border-radius: 5px;
   color: white;
   background-color: transparent;
@@ -96,4 +96,74 @@ form {
 
 .UpdateButton:hover {
   background-color: #f0f0f0;
+}
+
+/* Responsive */
+
+@media (max-width: 480px) {
+  .Box {
+    width: 100%;
+    height: auto;
+    margin-top: 20%;
+  }
+
+  .HereNowText {
+    font-size: 80px;
+    width: 100%;
+    height: auto;
+    top: 50px;
+    left: 0;
+  }
+
+  .GiftText {
+    font-size: 24px;
+    width: 100%;
+    height: auto;
+    top: 300px;
+    justify-content: center;
+    text-align: center;
+  }
+
+  h4 {
+    font-size: 19px;
+    width: 100%;
+    height: auto;
+    top: 350px;
+    padding-bottom: 40px;
+  }
+
+  form {
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: right;
+  }
+
+  form label {
+    width: 100%;
+    text-align: right;
+    margin-bottom: 10px;
+  }
+
+  form input {
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: transparent;
+    border: 3px solid white;
+  }
+
+  .UpdateButton {
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+    margin-top: 20px;
+    width: 300px;
+    height: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    cursor: pointer;
+  }
 }
