--- a/projects/LandingPageProject4/project 4/style/index.css
+++ b/projects/LandingPageProject4/project 4/style/index.css
@@ -26,7 +26,7 @@ h1 {
   height: 113px;
   letter-spacing: 0px;
   opacity: 1;
-  padding-top: 50%;
+  padding-top: 50%
   margin-bottom: 1%;
 }
 
@@ -52,12 +52,14 @@ h4 {
   border: 1px solid #ccc;
   border-radius: 5px;
   border-bottom: 3px solid #d3e10e;
+  box-shadow: none;
 }
 
 .form label {
   justify-content: right;
   text-align: right;
   padding: 5px;
+  display: block;
 }
 
 .form button {
@@ -70,3 +72,47 @@ h4 {
   margin-top: 10px;
   font-weight: bold;
 }
+
+/* Responsive */
+
+@media (max-width: 480px) {
+
+  body {
+    background-image: url("/images/Background.png ");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 60vh;
+  }
+
+  h1 {
+    font-size: 1.9rem;
+    padding-top: 10vh;
+    width: auto;
+    height: auto;
+  }
+
+  h4 {
+    font-size: 0.999rem;
+    padding-top: 2%;
+    padding-bottom: 10px;
+  }
+
+  .form {
+    padding-top: 70vw;
+    bottom: 0px;
+  }
+
+  .form label {
+    width: 90%;
+    text-align: right;
+    justify-content: right;
+  }
+
+  .form button {
+    width: 70%;
+    cursor: pointer;
+  }
+}
+
+
