--- a/projects/LandingPageProject4/project 4/style/index.css
+++ b/projects/LandingPageProject4/project 4/style/index.css
@@ -26,7 +26,7 @@ h1 {
   height: 113px;
   letter-spacing: 0px;
   opacity: 1;
-  padding-top: 50%
+  padding-top: 50%;
   margin-bottom: 1%;
 }
 
@@ -76,7 +76,6 @@ h4 {
 /* Responsive */
 
 @media (max-width: 480px) {
-
   body {
     background-image: url("/images/Background.png ");
     background-size: cover;
@@ -114,5 +113,3 @@ h4 {
     cursor: pointer;
   }
 }
-
-
