--- a/projects/LandingPageProject5/project 5/style/index.css
+++ b/projects/LandingPageProject5/project 5/style/index.css
@@ -23,10 +23,6 @@ body {
 
 .TextBox {
   text-align: center;
-  /*   margin-bottom: 30px; */
-  /*   top: 298px;
-  left: 969px; */
-  width: 15%;
   height: 25%;
   background: #020253 0% 0% no-repeat padding-box;
   opacity: 1;
@@ -193,4 +189,81 @@ Form label {
   cursor: pointer;
   font-weight: bold;
   border: 1px solid black;
+}
+
+/* Responsive*/
+
+@media (max-width: 480px) {
+  /* Grid Layout */
+
+  /*   .ImageBoxs .image {
+    width: 100%;
+    height: auto;
+    border: none;
+  } */
+
+  .box {
+    grid-column: 1/5;
+    grid-row: 1/4;
+  }
+  .image9 {
+    grid-column: 1/3;
+    grid-row: 4/6;
+  }
+  .image10 {
+    grid-column: ;
+    grid-row: ;
+  }
+  .image6 {
+    grid-column: ;
+    grid-row: ;
+  }
+  .image11 {
+    grid-column: ;
+    grid-row: ;
+  }
+  .image2 {
+    grid-column: ;
+    grid-row: ;
+  }
+  .image5 {
+    grid-column: ;
+    grid-row: ;
+  }
+  .image4 {
+    grid-column: ;
+    grid-row: ;
+  }
+  .image3 {
+    grid-column: ;
+    grid-row: ;
+  }
+  .image12 {
+    grid-column: ;
+    grid-row: ;
+  }
+  .image14 {
+    grid-column: ;
+    grid-row: ;
+  }
+  .image7 {
+    grid-column: ;
+    grid-row: ;
+  }
+  .image13 {
+    grid-column: ;
+    grid-row: ;
+  }
+  .image1 {
+    grid-column: ;
+    grid-row: ;
+  }
+  .image8 {
+    grid-column: ;
+    grid-row: ;
+  }
+  .FormBox {
+    grid-column: ;
+    grid-row: ;
+  }
 }
