--- a/projects/LandingPageProject5/project 5/style/index.css
+++ b/projects/LandingPageProject5/project 5/style/index.css
@@ -15,31 +15,25 @@ body {
 }
 
 .container {
-  max-width: 960px;
+  /*  max-width: 960px; */
+  width: 1000px;
   margin: 0 auto;
   padding: 20px;
   background-color: #e5eeff;
 }
 
-.TextBox {
-  text-align: center;
-  height: 25%;
-  background: #020253 0% 0% no-repeat padding-box;
-  opacity: 1;
-}
+/* Grid Layout in HTML */
 
-/* Grid Layout */
+.image {
+  width: 250px;
+  height: 250px;
+  border: none;
+}
 
 .ImageBoxs {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 10px;
-}
-
-.ImageBoxs .image {
-  width: 100%;
-  height: auto;
-  border: none;
 }
 
 .box {
@@ -106,6 +100,7 @@ body {
   grid-column: 3/5;
   grid-row: 4/7;
 }
+/* End of layout*/
 
 .box {
   background-color: #020253;
@@ -129,49 +124,56 @@ body {
   padding: 20px;
 }
 
-/* Form Layout */
-
 .FormBox {
-  background-color: #f0f0f0;
   padding: 20px;
   border-radius: 5px;
   text-align: center;
+  justify-content: center;
   background-color: #8e097c;
   color: #0ee1da;
+  width: 500px;
+  height: 800px;
+  margin: 0 auto;
 }
 
 Form {
   padding: 40px;
+  text-align: center;
+  justify-content: center;
 }
 
 .FormBox h2 {
   color: white;
   margin-top: 30px;
-}
-
-.FormBox h2 {
   margin-bottom: 20px;
   font: normal normal bold 35px/46px Assistant;
+  text-align: center;
+  justify-content: center;
 }
+
 .FormBox h3 {
   color: white;
   font-family: "Assistant";
   font-size: 16px;
   font-weight: normal;
+  text-align: center;
+  justify-content: center;
 }
 
 .FormBox input[type="text"],
 .FormBox input[type="email"],
 .FormBox textarea {
   display: block;
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 15px;
+  width: 300px;
+  padding: 20px;
+  margin: 0 auto 15px auto;
   border: 1px solid #ccc;
   border-radius: 3px;
   color: #0ee1da;
   border-bottom: 2px solid #0ee1da;
+  text-align: center;
 }
+
 Form label {
   display: block;
   text-align: right;
@@ -189,81 +191,112 @@ Form label {
   cursor: pointer;
   font-weight: bold;
   border: 1px solid black;
+  text-align: center;
+  justify-content: center;
 }
 
-/* Responsive*/
+/* Responsive Mode for Mobile Devices*/
 
 @media (max-width: 480px) {
-  /* Grid Layout */
+  .container {
+    padding: 10px;
+    height: 100vh;
+    width: 100vw;
+  }
 
-  /*   .ImageBoxs .image {
+  .FormBox button {
+    width: 100%;
+    padding: 10px;
+  }
+
+  .ImageBoxs .image {
     width: 100%;
     height: auto;
-    border: none;
-  } */
+  }
+
+  .ImageBoxs {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+  }
 
   .box {
-    grid-column: 1/5;
-    grid-row: 1/4;
+    grid-column: 1 / 5;
+    grid-row: 1 / 2;
   }
+
   .image9 {
-    grid-column: 1/3;
-    grid-row: 4/6;
+    grid-column: 1 / -1;
+    grid-row: 2 / 3;
   }
+
   .image10 {
-    grid-column: ;
-    grid-row: ;
+    grid-column: 1 / -1;
+    grid-row: 3 / 4;
   }
+
   .image6 {
-    grid-column: ;
-    grid-row: ;
+    grid-column: 1 / -1;
+    grid-row: 4 / 5;
   }
+
   .image11 {
-    grid-column: ;
-    grid-row: ;
+    grid-column: 1 / -1;
+    grid-row: 5 / 6;
   }
+
   .image2 {
-    grid-column: ;
-    grid-row: ;
+    grid-column: 1 / -1;
+    grid-row: 6 / 7;
   }
+
   .image5 {
-    grid-column: ;
-    grid-row: ;
+    grid-column: 1 / -1;
+    grid-row: 7 / 8;
   }
+
   .image4 {
-    grid-column: ;
-    grid-row: ;
+    grid-column: 1 / -1;
+    grid-row: 8 / 9;
   }
+
   .image3 {
-    grid-column: ;
-    grid-row: ;
+    grid-column: 1 / -1;
+    grid-row: 9 / 10;
   }
+
   .image12 {
-    grid-column: ;
-    grid-row: ;
+    grid-column: 1 / -1;
+    grid-row: 10 / 11;
   }
+
   .image14 {
-    grid-column: ;
-    grid-row: ;
+    grid-column: 1 / -1;
+    grid-row: 11 / 12;
   }
+
   .image7 {
-    grid-column: ;
-    grid-row: ;
+    grid-column: 1 / -1;
+    grid-row: 12 / 13;
   }
+
   .image13 {
-    grid-column: ;
-    grid-row: ;
+    grid-column: 1 / -1;
+    grid-row: 13 / 14;
   }
+
   .image1 {
-    grid-column: ;
-    grid-row: ;
+    grid-column: 1 / -1;
+    grid-row: 14 / 15;
   }
+
   .image8 {
-    grid-column: ;
-    grid-row: ;
+    grid-column: 1 / -1;
+    grid-row: 15 / 16;
   }
+
   .FormBox {
-    grid-column: ;
-    grid-row: ;
+    grid-column: 1 / -1;
+    grid-row: 16 / 17;
   }
 }
