--- a/projects/LandingPageProject5/project 5/style/index.css
+++ b/projects/LandingPageProject5/project 5/style/index.css
@@ -252,7 +252,8 @@ Form label {
     grid-row: ;
   }
   .FormBox {
-    /* Removed grid-column and grid-row properties */
+    grid-column: ;
+    grid-row: ;
   }
 
   .FormBox button {
