--- a/projects/LandingPageProject2/project 2/style/index.css
+++ b/projects/LandingPageProject2/project 2/style/index.css
@@ -5,26 +5,22 @@
   position: ltr;
 }
 
+body {
+  height: 100vh;
+}
+
 .Box {
   position: relative;
   background-color: #fff;
-  height: 100vh; 
-  width: 100vw; 
-  /* background-image: url("G:/האחסון שלי/Full Stack Developer Course Folder/קורס/GitHub-FullStack/FullStackProject-s/projects/LandingPageProject2/Project 2/images/TopPorjectWallpaper.png"); 
+  background-image: url("G:/האחסון שלי/Full Stack Developer Course Folder/קורס/GitHub-FullStack/FullStackProject-s/projects/LandingPageProject2/Project 2/images/TopPorjectWallpaper.png");
   background-size: cover;
-  background-position: top; */
-}
-
-.ImageContainer {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
+  background-position: top;
 }
 
 .FormBox {
   position: absolute;
   text-align: center;
-  top: 68%;
+  top: 110vh;
   right: 20;
   background-color: #1a1a1ad4;
   width: 468.61px;
@@ -62,37 +58,43 @@ Form {
   height: 50px;
   font-weight: bold;
   margin-top: 20px;
+}
 
-  input[type="email"],
-  input[type="text"] {
-    text-align: right;
-    justify-content: right;
-    justify-items: right;
+input[type="email"],
+input[type="text"] {
+  text-align: right;
+  justify-content: right;
+  justify-items: right;
+}
 
-  }
-
-  /* Responsive */
-
-/* ...existing code... */
+/* Responsive */
 
 @media (max-width: 480px) {
+  * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+
+  .Box {
+    background-size: cover;
+    background-position: top;
+  }
+
   .FormBox {
-    width: 90%;
-    height: auto;
+    margin-top: 80vw;
+    width: 300px;
+    height: 500px;
     top: 50%;
+    left: 50%;
     padding: 20px;
-  }
-
-  .FormBox form {
-    right: 100000000px;
-  }
-
-  .FormBox p {
-    text-align: center;
-    justify-content: center;
+    border-radius: 0;
   }
 
   .FormBox button {
+    position: relative;
+
+    justify-items: right;
     width: 100px;
     height: 40px;
     font-size: 14px;
@@ -102,7 +104,15 @@ Form {
   input[type="text"] {
     width: 100%;
     text-align: center;
-    justify-content: center;
-    justify-items: center;
+    justify-content: right;
+    justify-items: right;
+    margin: 20px;
+    padding: 10px;
+  }
+
+  label {
+    display: block;
+    text-align: right;
+    width: 100%;
   }
 }
