--- a/projects/LandingPageProject5/project 5/style/index.css
+++ b/projects/LandingPageProject5/project 5/style/index.css
@@ -208,52 +208,68 @@ Form label {
 
   .box {
     grid-column: 1 / 5;
-    grid-row: 1 / 5;
+    grid-row: 1 / 3;
   }
 
+  .image9 {
+    grid-column: 1 / 3;
+    grid-row: 3/5;
+  }
+  .image10 {
+    grid-column: 3 / 5;
+    grid-row: 3/5;
+  }
+  .image6 {
+    grid-column: 1/3;
+    grid-row: 5/7;
+  }
+  .image11 {
+    grid-column: 3/5;
+    grid-row: 5/7;
+  }
   .image2 {
-    grid-column: ;
-    grid-row: ;
+    grid-column: 1/3;
+    grid-row: 7/9;
   }
   .image5 {
-    grid-column: ;
-    grid-row: ;
+    grid-column: 3/5;
+    grid-row: 7/9;
   }
   .image4 {
-    grid-column: ;
-    grid-row: ;
+    grid-column: 1/3;
+    grid-row: 9/11;
   }
   .image3 {
-    grid-column: ;
-    grid-row: ;
+    grid-column: 3/5;
+    grid-row: 9/11;
   }
   .image12 {
-    grid-column: ;
-    grid-row: ;
+    grid-column: 1/3;
+    grid-row: 15/17;
   }
   .image14 {
-    grid-column: ;
-    grid-row: ;
+    grid-column: 3/5;
+    grid-row: 15/17;
   }
   .image7 {
-    grid-column: ;
-    grid-row: ;
+    grid-column: 1/3;
+    grid-row: 17/19;
   }
   .image13 {
-    grid-column: ;
-    grid-row: ;
+    grid-column: 3/5;
+    grid-row: 17/19;
   }
   .image1 {
-    grid-column: ;
-    grid-row: ;
+    grid-column: 1/3;
+    grid-row: 19/21;
   }
   .image8 {
-    grid-column: ;
-    grid-row: ;
+    grid-column: 3/5;
+    grid-row: 19/21;
   }
   .FormBox {
-    grid-column: ;
-    grid-row: ;
+    grid-column: 1/5;
+    grid-row: 11/15;
   }
 
   .FormBox button {
