--- a/projects/LandingPageProject5/project 5/style/index.css
+++ b/projects/LandingPageProject5/project 5/style/index.css
@@ -193,75 +193,67 @@ Form label {
   }
 
   .ImageBoxs {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .ImageBoxs .image {
+    width: 100%;
+    height: auto;
   }
 
   .box {
-    grid-column: 1 / 5;
-    grid-row: 1 / 3;
+    order: 1;
+    width: 100%;
   }
 
   .image9 {
-    grid-column: 1 / 3;
-    grid-row: 3/5;
+    order: 2;
   }
   .image10 {
-    grid-column: 3 / 5;
-    grid-row: 3/5;
+    order: 3;
   }
   .image6 {
-    grid-column: 1/3;
-    grid-row: 5/7;
+    order: 4;
   }
   .image11 {
-    grid-column: 3/5;
-    grid-row: 5/7;
+    order: 5;
   }
   .image2 {
-    grid-column: 1/3;
-    grid-row: 7/9;
+    order: 6;
   }
   .image5 {
-    grid-column: 3/5;
-    grid-row: 7/9;
+    order: 7;
   }
   .image4 {
-    grid-column: 1/3;
-    grid-row: 9/11;
+    order: 8;
   }
   .image3 {
-    grid-column: 3/5;
-    grid-row: 9/11;
+    order: 9;
   }
   .image12 {
-    grid-column: 1/3;
-    grid-row: 15/17;
+    order: 10;
   }
   .image14 {
-    grid-column: 3/5;
-    grid-row: 15/17;
+    order: 11;
   }
   .image7 {
-    grid-column: 1/3;
-    grid-row: 17/19;
+    order: 12;
   }
   .image13 {
-    grid-column: 3/5;
-    grid-row: 17/19;
+    order: 13;
   }
   .image1 {
-    grid-column: 1/3;
-    grid-row: 19/21;
+    order: 14;
   }
   .image8 {
-    grid-column: 3/5;
-    grid-row: 19/21;
+    order: 15;
   }
+
   .FormBox {
-    grid-column: 1/5;
-    grid-row: 11/15;
+    order: 16;
+    width: 100%;
   }
 
   .FormBox button {
