--- a/style/index.css
+++ b/style/index.css
@@ -158,7 +158,8 @@ input[type="checkbox"] {
 
 .ProjectSection {
   margin-top: 2%;
-  height: 900px;
+  height: auto;
+  padding-bottom: 20px;
   box-shadow: 0 4px 5px -2px rgba(0, 0, 0, 0.685);
 }
 .ProjectSection h2 {
